src/test/deca/syntax/invalid/provided/declaration_acc.deca
// Description:
//    Programme sans accolade fermante pour la fonction.
//
// Resultats:
//    Ligne 12 : Erreur de syntaxe
//
// Historique:
//    cree le 01/01/2022

{
        bool equals(int x, int y){
        	return(x==y);
}
